Fix cloth config background